# setter-suite

./: .gitignore  README.md  config.json  input_validator.cpp  main.py  make-build  requirements.txt  test.cpp
cpp_utils/: arrays.cpp  checker_entry.cpp  checker_utils.cpp  concepts.cpp  dependencies.json  dependencies.yml  dsu.cpp  exact_whitespace_mixin.cpp  gen_arrays.cpp  gen_entry.cpp  geo.cpp  graphs.cpp  identical_checker.cpp  identical_checker_entry.cpp  identical_interactor.cpp  identical_interactor_entry.cpp  immutable_random_access_range_mixin.cpp  integer_range.cpp  interaction.cpp  list.cpp  list_builder.cpp  negint.cpp  offset_range.cpp  output.cpp  pairs.cpp  random.cpp  random_arrays.cpp  random_graphs.cpp  random_pairs.cpp  random_ranges.cpp  random_set.cpp  range_header.cpp  ranges.cpp  reader.cpp  set_with_bit.cpp  sol_arrays.cpp  sol_entry.cpp  standard_checker.cpp  standard_checker_entry.cpp  standard_interactor.cpp  (+12 more)
generating/: arrays.cpp  arrays.hpp  random.hpp
rust_utils/: Cargo.toml  checker.rs  identical_whitespace.rs  reader  reader.rs  standard_checker.rs  standard_whitespace.rs
rust_utils/src/: checker.rs  generator.rs  identical_checker.rs  identical_checker_handler.rs  identical_whitespace.rs  interactive_solution.rs  lib.rs  non_interactive_solution.rs  panic_error_handler.rs  reader.rs  standard_checker.rs  standard_checker_handler.rs  standard_whitespace.rs  test_cases.rs  tied_streams.rs  validating_reader.rs
rust_utils/src/checker/: mod.rs  tests.rs
rust_utils/src/identical_whitespace/: mod.rs  tests.rs
rust_utils/src/output/: mod.rs  tests.rs
rust_utils/src/random_arrays/: mod.rs  tests.rs
rust_utils/src/reader/: mod.rs  tests.rs
rust_utils/src/slice_validation/: mod.rs  tests.rs
rust_utils/src/splay/: mod.rs
rust_utils/src/standard_whitespace/: mod.rs  tests.rs
scripts/: build.py  checkers.py  compile.py  countercase.py  entry.py  env.py  executors.py  full_build.py  generator.py  init_template.py  init_yml.py  invoke.py  judge.py  validate.py  validator_base.py
scripts/rust/: __init__.py  init_template.py  reload_library.py
tests/: bogo.py  gen.cpp  random_arr.py  random_rte.cpp  random_rte.py  sol.cpp  sol.py  test.cpp
