[package]
name = "dmoj_rust_utils"
version = "0.1.0"
edition = "2021"

[features]
checker = []
generator = ["output", "test_cases"]
identical_checker = ["checker", "identical_whitespace", "reader"]
identical_whitespace = ["reader"]
interactive_solution = ["output", "tied_streams", "validating_reader"]
non_interactive_solution = ["output", "validating_reader"]
output = []
panic_error_handler = ["reader"]
reader = []
standard_checker = ["checker", "reader", "standard_whitespace"]
standard_whitespace = ["reader"]
test_cases = []
tied_streams = []
validating_reader = ["identical_whitespace", "panic_error_handler", "reader"]

[dependencies]
rand = "0.8"
